--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body { background-color: #000; color: #fff; font-family: "Nunito", sans-serif; d
 
       if (progress >= 100) {
         clearInterval(interval);
-        window.location.href = 'https://www.kinbasari.my.id/coretan/rahasia-cepat-paham-saat-belajar.html';
+        window.location.href = 'https://www.tintapenaku.com/coretan/rahasia-cepat-paham-saat-belajar.html';
       }
     }, 60);
   </script>
